health_check + build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
       - cp appspec.yml bundle/
       - cp -r scripts bundle/
       - cp build/libs/*.jar bundle/
+      - chmod -R +x bundle/scripts || true
 
 artifacts:
   files:
