Fix start.sh permission and update CodeDeploy config

--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,15 @@ permissions:
     owner: ec2-user
     group: ec2-user
     mode: 755
+    type:
+      - directory
+
+  - object: /home/ec2-user/app
+    owner: ec2-user
+    group: ec2-user
+    mode: 664
+    type:
+      - file
 
 hooks:
   ApplicationStop:
