--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,6 @@ phases:
 
   pre_build:
     commands:
-      - echo "Start build"
       - chmod +x ./gradlew
 
   build:
@@ -16,11 +15,18 @@ phases:
 
   post_build:
     commands:
-      - echo "Build completed"
+      - rm -rf bundle
+      - mkdir -p bundle
+      - cp appspec.yml bundle/
+      - cp -r scripts bundle/
+      - cp build/libs/*.jar bundle/
+      - chmod -R +x bundle/scripts || true
+      - echo "=== bundle tree ==="
+      - ls -al bundle
+      - ls -al bundle/scripts
+      - ls -al bundle/*.jar
 
 artifacts:
+  base-directory: bundle
   files:
-    - appspec.yml
-    - scripts/**
-    - build/libs/*.jar
-
+    - '**/*'
