--- a/appspec.yml
+++ b/appspec.yml
@@ -14,18 +14,18 @@ permissions:
 
 hooks:
   ApplicationStop:
-    - location: stop.sh
+    - location: scripts/stop.sh
       timeout: 60
       runas: ec2-user
 
   ApplicationStart:
-    - location: start.sh
+    - location: scripts/start.sh
       timeout: 180
       runas: ec2-user
 
   ValidateService:
-    - location: health_check.sh
-      timeout: 300
+    - location: scripts/health_check.sh
+      timeout: 120
       runas: ec2-user
 
 
