--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: demo-0.0.1.jar
+  - source: app.jar
     destination: /home/ec2-user/app
     overwrite: yes
 
