--- a/appspec.yml
+++ b/appspec.yml
@@ -2,12 +2,27 @@ version: 0.0
 os: linux
 
 files:
-  - source: app.jar
+  - source: build/libs/app.jar
     destination: /home/ec2-user/app
     overwrite: yes
 
 permissions:
   - object: /home/ec2-user/app
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+
+  - object: start.sh
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+
+  - object: stop.sh
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+
+  - object: health_check.sh
     owner: ec2-user
     group: ec2-user
     mode: 755
@@ -27,8 +42,3 @@ hooks:
     - location: health_check.sh
       timeout: 120
       runas: ec2-user
-
-
-
-
-
