--- a/appspec.yml
+++ b/appspec.yml
@@ -2,27 +2,12 @@ version: 0.0
 os: linux
 
 files:
-  - source: build/libs/app.jar
+  - source: app.jar
     destination: /home/ec2-user/app
     overwrite: yes
 
 permissions:
   - object: /home/ec2-user/app
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-
-  - object: start.sh
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-
-  - object: stop.sh
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-
-  - object: health_check.sh
     owner: ec2-user
     group: ec2-user
     mode: 755
@@ -42,3 +27,8 @@ hooks:
     - location: health_check.sh
       timeout: 120
       runas: ec2-user
+
+
+
+
+
