--- a/appspec.yml
+++ b/appspec.yml
@@ -2,8 +2,9 @@ version: 0.0
 os: linux
 
 files:
-  - source: app.jar
+  - source: /
     destination: /home/ec2-user/app
+    overwrite: yes
 
 permissions:
   - object: /home/ec2-user/app
@@ -12,20 +13,11 @@ permissions:
     mode: 755
 
 hooks:
-  ApplicationStop:
-    - location: stop.sh
-      timeout: 60
-      runas: ec2-user
-
   ApplicationStart:
     - location: start.sh
       timeout: 180
       runas: ec2-user
 
-  ValidateService:
-    - location: health_check.sh
-      timeout: 120
-      runas: ec2-user
 
 
 
