--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,9 @@ permissions:
     owner: ec2-user
     group: ec2-user
     mode: 755
+    type:
+      - directory
+      - file
 
 hooks:
   ApplicationStart:
