--- a/appspec.yml
+++ b/appspec.yml
@@ -16,6 +16,11 @@ permissions:
       - file
 
 hooks:
+  BeforeInstall:
+    - location: remove_old.sh
+      timeout: 60
+      runas: ec2-user
+      
   ApplicationStart:
     - location: start.sh
       timeout: 180
