--- a/appspec.yml
+++ b/appspec.yml
@@ -17,10 +17,10 @@ permissions:
 
 hooks:
   BeforeInstall:
-    - location: remove_old.sh
+    - location: stop.sh
       timeout: 60
       runas: ec2-user
-      
+
   ApplicationStart:
     - location: start.sh
       timeout: 180
