--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,9 @@ version: 0.0
 os: linux
 
 files:
-  - source: /
+  - source: app.jar
     destination: /home/ec2-user/app
-    overwrite: yes
+    overwrite: true
 
 permissions:
   - object: /home/ec2-user/app
