--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/app
-    overwrite: true
+    overwrite: yes
 
 permissions:
   - object: /home/ec2-user/app
